<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".ProfileSetupActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_setup"
        android:textSize="30sp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:textAppearance="@font/poppins"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="14sp"
        android:fontFamily="@font/inter"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="John"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="14sp"
        android:fontFamily="@font/inter"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Doe"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth"
        android:textSize="14sp"
        android:fontFamily="@font/inter"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/dobEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="YYYY-MM-DD"
        android:inputType="date"
        android:padding="16dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginBottom="16dp"
        android:drawableEnd="@drawable/ic_calendar"
        android:drawableRight="@drawable/ic_calendar"
        android:focusable="false"
        android:clickable="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="14sp"
        android:fontFamily="@font/inter"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_background"
        android:paddingStart="16dp"
        android:paddingTop="5dp"
        android:paddingEnd="16dp">

        <Spinner
            android:id="@+id/genderSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingEnd="32dp"/>

        <ImageView
            android:id="@+id/spinnerIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_arrow_drop_down"/>
    </FrameLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/inter"
        android:padding="16dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>