<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_button_background"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="3dp"
            android:text="Password manager"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/backButton"
            app:layout_constraintStart_toEndOf="@id/backButton"
            app:layout_constraintTop_toTopOf="@id/backButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/currentPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/inter"
            android:text="@string/current_password"
            android:textColor="@android:color/black"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/currentPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#CCCCCC"
            app:hintEnabled="false"
            app:passwordToggleDrawable="@drawable/ic_visibility"
            app:passwordToggleEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/newPasswordLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/currentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/current_password_hint"
                android:inputType="textPassword"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/newPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/inter"
        android:text="@string/new_password"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#CCCCCC"
        app:hintEnabled="false"
        app:passwordToggleDrawable="@drawable/ic_visibility"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/confirmPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/inter"
        android:text="@string/confirm_new_password"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmNewPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#CCCCCC"
        app:hintEnabled="false"
        android:layout_marginTop="3dp"
        app:passwordToggleDrawable="@drawable/ic_visibility"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/edit_text_background"
            android:hint="@string/confirm_new_password_hint"
            android:inputType="textPassword"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:background="@drawable/button_background"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmNewPasswordLayout" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>