<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_button_background"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="3dp"
            android:text="Personal details"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/backButton"
            app:layout_constraintTop_toTopOf="@id/backButton"
            app:layout_constraintBottom_toBottomOf="@id/backButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Main Content -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_marginTop="30dp"
            android:paddingBottom="32dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="14sp"
                android:fontFamily="@font/inter"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:background="@drawable/edit_text_background"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="14sp"
                android:fontFamily="@font/inter"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:background="@drawable/edit_text_background"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:textSize="14sp"
                android:fontFamily="@font/inter"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/dobEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:padding="16dp"
                android:background="@drawable/edit_text_background"
                android:layout_marginBottom="16dp"
                android:drawableEnd="@drawable/ic_calendar"
                android:drawableRight="@drawable/ic_calendar"
                android:focusable="false"
                android:clickable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="14sp"
                android:fontFamily="@font/inter"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/edit_text_background"
                android:paddingStart="16dp"
                android:paddingTop="5dp"
                android:paddingEnd="16dp">

                <Spinner
                    android:id="@+id/genderSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:paddingEnd="32dp" />

                <ImageView
                    android:id="@+id/spinnerIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/ic_arrow_drop_down" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/updateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/inter"
                android:padding="16dp"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="24dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
