<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartListActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnBack"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/cicrcle_white_bg"
        android:backgroundTint="#EEEDED"
        android:onClick="onBackPressed"
        android:src="@drawable/ic_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFavorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/cart"
        android:textFontWeight="600"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/btnBack" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFavorite" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvFavorite" />

    <TextView
        android:id="@+id/tvSubtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:textSize="24sp"
        android:textFontWeight="500"
        android:alpha="0.6"
        android:text="@string/sub_total"
        app:layout_constraintTop_toBottomOf="@id/listCart"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/tvSubtotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:textSize="26sp"
        android:textFontWeight="600"
        app:layout_constraintTop_toBottomOf="@id/listCart"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="$100"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCheckout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/order"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvSubtotal"
        />

</androidx.constraintlayout.widget.ConstraintLayout>